--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -544,7 +544,7 @@ img {
 }
 
 .l-contents--page-recruit {
-    background-image: url(img/bg-geometry.png);
+    background-image: url(/public/img/bg-geometry.png);
     /* Background pattern from Toptal Subtle Patterns */
     background-repeat: repeat;
 }
